# Finance-Assistant

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ingest-daily-news.yml  ingest-sp500-prices.yml  send-market-email.yml
finance_rag/: __init__.py  api.py  cli.py  email_summary.py  embeddings.py  index.py  llm.py  models.py  pgvector_store.py  prices.py  sources.py  text.py
hf-space/: README.md  app.py  requirements.txt
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260618011424_finance_rag_schema.sql  20260620000000_news_only.sql  20260621000000_intraday_price_snapshots.sql  20260622000000_email_subscribers.sql
tests/: test_api.py  test_email_summary.py  test_embeddings.py  test_index.py  test_llm.py  test_pgvector_store.py  test_prices.py  test_sources.py  test_text.py
web/: .env.example  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/chat/: route.ts
web/app/api/subscribe/: route.ts
