[project]
name = "finance-ai"
version = "0.1.0"
description = "CLI RAG chatbot for daily market news and SEC filing context."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "psycopg[binary]>=3.2",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
finance-chat = "finance_rag.cli:main"
finance-api = "finance_rag.api:main"

[tool.setuptools.packages.find]
include = ["finance_rag*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
