[project]
name = "finance-ai"
version = "0.1.0"
description = "Scheduled ingestion service for Finance AI."
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.2",
    "trafilatura>=2.0,<3",
]

[project.scripts]
finance-chat = "finance_rag.cli:main"

[tool.setuptools.packages.find]
include = ["finance_rag*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
